src/test/resources/de/cd4analysis/cocos/invalid/U0504.cd
package de.cd4analysis.cocos;

classdiagram U0504 {
  enum E {
    a, b, a, c;
  }
}